--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,10 @@
         bottom: 7vh;
     }
     .carouselText h1{font-size: 5vh;}
+    .parrafoText h2{
+        width: 90%;
+        margin: auto;
+    }
 }
 @media (min-width: 576px) {
     .carouselImg{ transform: translateX(-20vw);}
@@ -14,6 +18,14 @@
         bottom: 7vh;
     }
     .carouselText h1{font-size: 3rem;}
+    .parrafoText h2{
+        width: 90%;
+        margin: auto;
+    }
+    .parrafoText img{
+        border-radius: 20px;
+        width: 80%;
+    }
     
 }
 @media (min-width: 768px) {
@@ -24,6 +36,12 @@
     }
     .carouselText h1{font-size: 6vw;}
     
+    .parrafoText{
+        max-width: 60%;
+    }
+    .parrafoText img{
+        border-radius: 20px;
+    }
 }
 
 @media (min-width: 992px) {
@@ -48,4 +66,13 @@
 .carouselText p{
     font-weight: lighter;
     color: #b7ff96;
+}
+
+.parrafoText p{
+    font-size: 1.1rem;
+}
+
+.parrafoText h2{
+    font-size: 2rem;
+    font-weight: 600;
 }
