--- a/css/global.css
+++ b/css/global.css
@@ -1,9 +1,71 @@
+/* X-SMALL */
 @media (max-width: 576px) {
     .topBarMenu{
-        min-height: 5em;
+        min-height: 4rem;
     }
     .nav-item a{
         font-size: 1.2em;
+    }
+
+    /* INDEX */
+    .carouselImg{ transform: translateX(-14rem);}
+    .carouselText{
+        bottom: 5vw;
+    }
+    .carouselText h1{
+        letter-spacing: 0.4rem;
+    }
+    .frameVideo{
+        width: calc(41.5vh);
+        height: calc(24.8125vh);
+    }
+}
+/* SMALL */
+@media (min-width: 576px) {
+    /* INDEX */
+    .carouselImg{ transform: translateX(-20vw);}
+    .carouselText{
+        bottom: 8vh;
+    }
+    .carouselText h1{
+        letter-spacing: 1rem;
+    }
+}
+
+/* MEDIUM */
+@media (min-width: 768px) {
+    /* INDEX */
+    .carouselImg{ transform: translateX(0);}
+    .carouselText{
+        bottom: 8vw;
+    }
+    
+    /* topbar */
+    .logoImg{
+        width: 250px;
+        height: 25px;
+    }
+
+    .frameVideo{
+        width: calc(37.5vw);
+        height: calc(20.8125vw);
+    }
+}
+/* LARGE */
+@media (min-width: 992px) {
+    /* INDEX */
+    .carouselText{
+        bottom: 10vw;
+    }
+
+    /* QUIENES SOMOS */
+    .text-block {
+        max-width: 500px;
+    }
+    
+    .frameVideo{
+        width: calc(37.5vw);
+        height: calc(20.8125vw);
     }
 }
 
@@ -11,19 +73,36 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-.topBarImg{/*imagen de fondo para navbar*/
+/*imagen de fondo para navbar*/
+/* .topBarImg{
     background-image: url(../img/bg_topBar.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+} */
+
+#openTopMenu a{
+    text-decoration: none;
+}
+
+#openTopMenu .activePag{
+    color: white;
+}
+
+.sub-heading {
+    font-size: 14px;
+    letter-spacing: 1px;
+}
+
+.parrafoImg img{
+    border-radius: 8px;
+    max-height: 300px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .logoImg{
-    max-height: 5em;
-}
-
-.topBarMenu{
-    background-color: #070707;
+    max-height: 25px;
+    image-rendering: -webkit-optimize-contrast;
 }
 
 .navbar-toggler:focus {
@@ -31,8 +110,8 @@
 }
 
 .footerImg{
-    min-width: 13em;
-    max-width: 16em;
+    max-height: 25px;
+    image-rendering: -webkit-optimize-contrast;
 }
 
 footer{
@@ -55,6 +134,48 @@ footer h5 {
     font-size: 1.3em;
 }
 
-footer a:hover{
+a:hover{
     color: #73dd6f;
+}
+
+
+/* INDEX */
+.carouselImg {
+    width: 100%;
+    min-width: 150vh;
+    filter: brightness(60%);
+}
+
+.carouselText{
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.carouselText p{
+    font-weight: lighter;
+    color: #b7ff96;
+}
+
+/* QUIENES SOMOS */
+.frameVideo{
+    border-radius: 10px;
+    border-style: double;
+    border-width: 10px;
+}
+
+.pre-heading{
+    color: #73dd6f;
+    font-size: 14px;
+    letter-spacing: 2px;
+}
+
+.card-img{
+    align-self: center;
+    margin-top: 5em;
+    width: 270px;
+    height: 270px;
+}
+
+.list-group-item {
+    border: 0;
 }
