--- a/css/global.css
+++ b/css/global.css
@@ -109,6 +109,21 @@
     box-shadow: none;
 }
 
+nav ~ * {
+    animation: transitionIn 0.75s;
+}
+
+@keyframes transitionIn {
+    from {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 .footerImg{
     max-height: 25px;
     image-rendering: -webkit-optimize-contrast;
