--- a/core/templates/core/contacto.html
+++ b/core/templates/core/contacto.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
+{% load static %}
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="css/global.css">
+  <link rel="stylesheet" href="{% static 'core/css/global.css' %}">
   <title>Contacto - Macetitas</title>
-  <script src="js/csi.min.js"></script>
   <style>
     /* Chrome, Safari, Edge, Opera */
     input::-webkit-outer-spin-button,
@@ -29,7 +29,7 @@
 </head>
 <body>
   <!-- TOP BAR -->
-  <div data-include="content/topBar.html"></div>
+  {% include "core/repeat/topBar.html" %}
 
   <!-- Formulario de Feedback -->
   <div class="container my-5">
@@ -92,10 +92,11 @@
   </div>
   
   <!-- FOOTER -->
-  <div data-include="content/footer.html"></div>
+  {% include "core/repeat/footer.html" %}
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script src="js/form_validator.js"></script>
+  <script src="{% static 'core/js/form_validator.js' %}"></script>
 
 
 </body>
