--- a/core/templates/core/galeria.html
+++ b/core/templates/core/galeria.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+{% load static %}
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="css/global.css">
+  <link rel="stylesheet" href="{% static 'core/css/global.css' %}">
   <title>Galeria - Macetitas</title>
-  <script src="js/csi.min.js"></script>
 </head>
 <body>
   <!-- TOP BAR -->
-  <div data-include="content/topBar.html"></div>
+  {% include "core/repeat/topBar.html" %}
 
   <h1 class="h2 py-3 bg-black text-white fw-bold text-center">GALERÍA DE FOTOS</h1>
 
@@ -21,7 +21,7 @@
       <div class="col-sm-12 col-md-6 col-lg-4">
         <button class="btn btn-primary-outline" type="button" data-bs-toggle="collapse"
           data-bs-target="#multiCollapseExample1" aria-expanded="false" aria-controls="multiCollapseExample1">
-          <img class="card-img" src="img/costilla_de_adan.jpg">
+          <img class="card-img" src="{% static 'core/img/galeria/costilla_de_adan.jpg' %}">
         </button>
         <h5 class="h5 mt-3">Costilla de Adán</h5>
         <p class="text-muted">Monstera Deliciosa</p>
@@ -54,7 +54,7 @@
       <div class="col-sm-12 col-md-6 col-lg-4">
         <button class="btn btn-primary-outline" type="button" data-bs-toggle="collapse"
           data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">
-          <img class="card-img" src="img/Kalanchoe.jpg" />
+          <img class="card-img" src="{% static 'core/img/galeria/Kalanchoe.jpg' %}" />
         </button>
         <h5 class="h5 mt-3">Kalanchoe</h5>
         <p class="text-muted">Kalanchoe Blossfeldiana</p>
@@ -87,7 +87,7 @@
       <div class="col-sm-12 col-md-6 col-lg-4">
         <button class="btn btn-primary-outline" type="button" data-bs-toggle="collapse"
           data-bs-target="#multiCollapseExample3" aria-expanded="false" aria-controls="multiCollapseExample3">
-          <img class="card-img" src="img/Zamioculca.jpg" />
+          <img class="card-img" src="{% static 'core/img/galeria/Zamioculca.jpg' %}" />
         </button>
         <h5 class="h5 mt-3">Zamioculca</h5>
         <p class="text-muted">Zamioculca zamicifolia</p>
@@ -121,7 +121,7 @@
         <p>
           <button class="btn btn-primary-outline" type="button" data-bs-toggle="collapse"
             data-bs-target="#multiCollapseExample4" aria-expanded="false" aria-controls="multiCollapseExample4">
-            <img class="card-img" src="img/Palmera_de_salon.jpg" />
+            <img class="card-img" src="{% static 'core/img/galeria/Palmera_de_salon.jpg' %}" />
           </button>
         </p>
         <h5 class="h5 mt-3">Palmera de Salón</h5>
@@ -157,7 +157,7 @@
         <p>
           <button class="btn btn-primary-outline" type="button" data-bs-toggle="collapse"
             data-bs-target="#multiCollapseExample5" aria-expanded="false" aria-controls="multiCollapseExample5">
-            <img class="card-img" src="img/Planta_de_dinero.jpg" />
+            <img class="card-img" src="{% static 'core/img/galeria/Planta_de_dinero.jpg' %}" />
           </button>
         </p>
         <h5 class="h5 mt-3">Planta de Dinero</h5>
@@ -193,7 +193,7 @@
         <p>
           <button class="btn btn-primary-outline" type="button" data-bs-toggle="collapse"
             data-bs-target="#multiCollapseExample6" aria-expanded="false" aria-controls="multiCollapseExample6">
-            <img class="card-img" src="img/Romero.jpg" />
+            <img class="card-img" src="{% static 'core/img/galeria/Romero.jpg' %}" />
           </button>
         </p>
         <h5 class="h5 mt-3">Romero</h5>
@@ -227,7 +227,7 @@
     </div>
   </div>
 
-  <div data-include="content/footer.html"></div>
+  {% include "core/repeat/footer.html" %}
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
