--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+{% load static %}
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="css/global.css">
+  <link rel="stylesheet" href="{% static 'core/css/global.css' %}">
   <title>Inicio - Macetitas</title>
-  <script src="js/csi.min.js"></script>
 </head>
 <body>
   <!-- TOP BAR -->
-  <div data-include="content/topBar.html"></div>
+  {% include "core/repeat/topBar.html" %}
 
   <!-- Mid Body -->
 
@@ -20,7 +20,7 @@
   <div id="carouselExampleCaptions" class="carousel slide carousel-fade m-auto" data-bs-ride="carousel">
     <div class="carousel-inner bg-black mb-5">
       <div class="carousel-item active carouselItem">
-        <img src="img/carousel/slide1.jpg" class="d-block carouselImg">
+        <img src="{% static 'core/img/index/carousel/slide1.jpg' %}" class="d-block carouselImg">
         <div class="carousel-caption d-flex flex-column carouselText">
           <h1 class="pb-sm-2 fw-bold fs-1">CALIDAD</h1>
           <p class="mx-2 d-block fs-3">
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="carousel-item carouselItem">
-        <img src="img/carousel/slide2.jpg" class="d-block carouselImg">
+        <img src="{% static 'core/img/index/carousel/slide2.jpg' %}" class="d-block carouselImg">
         <div class="carousel-caption d-flex flex-column carouselText">
           <h1 class="pb-sm-2 fw-bold fs-1">VARIEDAD</h1>
           <p class="mx-2 d-block fs-3">
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div class="carousel-item carouselItem">
-        <img src="img/carousel/slide3.jpg" class="d-block carouselImg">
+        <img src="{% static 'core/img/index/carousel/slide3.jpg' %}" class="d-block carouselImg">
         <div class="carousel-caption d-flex flex-column carouselText">
           <h1 class="pb-sm-2 fw-bold fs-1">GRANITO DE ARENA</h1>
           <p class="mx-2 d-block fs-3">Cuando cuidadas una planta, te cuidas a ti y al planeta</p>
@@ -63,19 +63,19 @@
         <p class="fs-6 mb-5">Te invitamos a nuestra tienda virtual donde podrás encontrar una gran variedad de plantas, así como silvestres, exóticas o simplemente para decorar tu hogar. 
         <br>Atrevete a mostrar tu amor por lo verde y tambien así ayudar a el planeta con tu granito de arena.</p>  
       </div>
-      <img class="img-fluid mx-lg-0 mx-sm-auto d-sm-block" src="img/img_Index_Plants_Text.png" alt="">
+      <img class="img-fluid mx-lg-0 mx-sm-auto d-sm-block" src="{% static 'core/img/index/img_Index_Plants_Text.png' %}" alt="">
     </div>
     <div class="container-md d-md-flex flex-md-row-reverse text-center text-md-end text-lg-start align-items-center justify-content-around">
       <div class="ms-md-5 ms-lg-5 text-block ">
         <h2 class="fw-bold fs-3">Y si ya tienes alguna planta...¡no te olvides de las macetas!</h2>
         <p class="fs-6 mb-5">Tenemos una gran variedad de maceteros, de buena calidad y de diversos materiales, diseños y tamaños, para así darle estilo a tu hogar y tu planta.</p>  
       </div>
-      <img class="img-fluid mx-lg-0 mx-sm-auto d-sm-block" src="img/img_Index_Macetero_Text.png" alt="">
+      <img class="img-fluid mx-lg-0 mx-sm-auto d-sm-block" src="{% static 'core/img/index/img_Index_Macetero_Text.png' %}" alt="">
     </div>
   </div>
 
   <!-- FOOTER -->
-  <div data-include="content/footer.html"></div>
+  {% include "core/repeat/footer.html" %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
