--- a/core/templates/core/quienes_somos.html
+++ b/core/templates/core/quienes_somos.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+{% load static %}
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="css/global.css">
+  <link rel="stylesheet" href="{% static 'core/css/global.css' %}">
   <title>Quienes Somos - Macetitas</title>
-  <script src="js/csi.min.js"></script>
 </head>
-<body>
+<body class="bg-black">
   <!-- TOP BAR -->
-  <div data-include="content/topBar.html"></div>
+  {% include "core/repeat/topBar.html" %}
 
   <!-- Mid Body -->
   <div class="container-fluid py-0 text-white bg-black">
@@ -29,7 +29,7 @@
   <div class="parrafoImg mb-0 d-block d-md-flex row-cols-md-2 text-white">
     <div class=" p-0">
       <div class="d-lg-flex text-center text-lg-start align-items-center justify-content-around py-3"
-           style="background-image: url(img/plants-1.jpg); background-position: center; background-size: cover;">
+           style="background-image: url({% static 'core/img/quienes_somos/plants-1.jpg' %}); background-position: center; background-size: cover;">
         <div class="text-block">
           <p class="pre-heading mb-2">NUESTRA MISIÓN</p>
           <h2 class="fw-bold fs-3">Ofrecer productos de calidad</h2>
@@ -39,7 +39,7 @@
         <!-- <img class="img-fluid mx-lg-0 mx-sm-auto d-sm-block" src="img/plants-1.jpg" alt=""> -->
       </div>
       <div class="d-lg-flex text-center text-lg-start align-items-center justify-content-around py-3"
-           style="background-image: url(img/gardening-tools.jpg); background-position: center; background-size: cover;">
+           style="background-image: url({% static 'core/img/quienes_somos/gardening-tools.jpg' %}); background-position: center; background-size: cover;">
         <div class="text-block">
           <p class="pre-heading mb-2">NUESTRA VISIÓN</p>
           <h2 class="fw-bold fs-3">Ser lideres en la venta de productos de jardinería</h2>
@@ -49,7 +49,7 @@
         <!-- <img class="img-fluid mx-lg-0 mx-sm-auto d-sm-block" src="img/gardening-tools.jpg" alt=""> -->
       </div>
       <div class="d-lg-flex text-center text-lg-start align-items-center justify-content-around py-3"
-           style="background-image: url(img/plants-2.jpg); background-position: center; background-size: cover;">
+           style="background-image: url({% static 'core/img/quienes_somos/plants-2.jpg' %}); background-position: center; background-size: cover;">
         <div class="text-block">
           <p class="pre-heading mb-2">NUESTRO OBJETIVO</p>
           <h2 class="fw-bold fs-3">Formar una sociedad más verde en Chile y el mundo</h2>
@@ -59,7 +59,7 @@
         <!-- <img class="img-fluid mx-lg-0 mx-sm-auto d-sm-block" src="img/plants-2.jpg" alt=""> -->
       </div>
     </div>
-    <div class="p-0" style="background-image: url(img/column.jpg); background-size: cover; background-position: center;">
+    <div class="p-0" style="background-image: url({% static 'core/img/quienes_somos/column.jpg' %}); background-size: cover; background-position: center;">
       <div class="text-white py-3">
         <div class="container-fluid text-center justify-content-center">
           <p class="opacity-75 sub-heading mb-2">¿SABIAS QUE...?</p>
@@ -78,7 +78,7 @@
  
 
   <!-- FOOTER -->
-  <div data-include="content/footer.html"></div>
+  {% include "core/repeat/footer.html" %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
