--- a/core/templates/core/repeat/topBar.html
+++ b/core/templates/core/repeat/topBar.html
@@ -19,8 +19,11 @@
           <li class="nav-item my-2 my-sm-0 me-sm-4">
             <a class="text-opacity-75" href="{% url 'galeria' %}">GALERÍA DE FOTOS</a>
           </li>
-          <li class="nav-item my-2 my-sm-0">
+          <li class="nav-item my-2 my-sm-0 me-sm-4">
             <a class="text-opacity-75" href="{% url 'contacto' %}">CONTACTO</a>
+          </li>
+          <li class="nav-item my-2 my-sm-0">
+            <a class="text-opacity-75" href="{% url 'soporte' %}">SOPORTE</a>
           </li>
         </ol>
       </div>
