Mejoras al Top Bar y Footer

--- a/core/templates/core/repeat/footer.html
+++ b/core/templates/core/repeat/footer.html
@@ -19,6 +19,7 @@
               <li><a class="text-decoration-none" href="{% url 'quienes_somos' %}">Quiénes Somos</a></li>
               <li><a class="text-decoration-none" href="{% url 'galeria' %}">Galería de Fotos</a></li>
               <li><a class="text-decoration-none" href="{% url 'contacto' %}">Contacto</a></li>
+              <li><a class="text-decoration-none" href="{% url 'login' %}">Cuenta</a></li>
             </ul>
         </div>
 
