--- a/core/templates/core/register.html
+++ b/core/templates/core/register.html
@@ -21,52 +21,59 @@
             <h5 class="mb-0">Crear Cuenta</h5>
           </div>
           <div class="card-body">
-            <form>
-              <!-- 2 column grid layout with text inputs for the first and last names -->
-              <div class="row mb-4">
-                <div class="col">
-                  <div class="form-outline">
-                    <label class="form-label" for="name">Nombre</label>
-                    <input type="text" id="name" class="form-control" pattern="^[a-zA-Z]*$" />
-                    <div class="name valid-feedback"></div>
-                    <div class="name invalid-feedback">Nombre no válido.</div>
+            <form method="post" action="" id="formulario">
+              
+              {% csrf_token %}
+
+              <div class="form-group">
+                <div class="form-outline mb-4">
+                  <label class="form-label" for="username">Nombre de usuario</label>
+                  <input type="text" id="username" name="usuario" class="form-control"/>
+                  <div class="username valid-feedback"></div>
+                  <div class="username invalid-feedback"></div>
+                  <p class="text-danger">{{ register_message }}</p>
+                </div>
+                
+                <!-- 2 column grid layout with text inputs for the first and last names -->
+                <div class="row mb-4">
+                  <div class="col ">
+                    <div class="form-outline">
+                      <label class="form-label" for="name">Nombre</label>
+                      <input type="text" id="name" name="nombre" class="form-control" />
+                      <div class="name valid-feedback"></div>
+                      <div class="name invalid-feedback"></div>
+                    </div>
+                  </div>
+
+                  <div class="col">
+                    <div class="form-outline">
+                      <label class="form-label" for="surname">Apellido</label>
+                      <input type="text" id="surname" name="apellido" class="form-control" />
+                      <div class="surname valid-feedback"></div>
+                      <div class="surname invalid-feedback"></div>
+                    </div>
                   </div>
                 </div>
-                <div class="col">
-                  <div class="form-outline">
-                    <label class="form-label" for="surname">Apellido</label>
-                    <input type="text" id="surname" class="form-control" pattern="^[a-zA-Z]*$" />
-                    <div class="surname valid-feedback"></div>
-                    <div class="surname invalid-feedback">Apellido no válido.</div>
-                  </div>
+                
+                <!-- Text input -->
+                <div class="form-outline mb-4">
+                  <label class="form-label" for="mail">Correo electrónico</label>
+                  <input type="email" id="mail" name="correo" class="form-control" />
+                  <div class="mail valid-feedback"></div>
+                  <div class="mail invalid-feedback"></div>
+                </div>
+      
+                <!-- Text input -->
+                <div class="form-outline mb-4">
+                  <label class="form-label" for="password">Contraseña</label>
+                  <input type="password" id="password" name="password" class="form-control" />
+                  <div class="password valid-feedback"></div>
+                  <div class="password invalid-feedback"></div>
                 </div>
               </div>
-  
-              <div class="form-outline mb-4">
-                <label class="form-label" for="username">Nombre de usuario</label>
-                <input type="text" id="username" class="form-control" pattern="^[a-zA-Z0-9]{3,12}$"/>
-                <div class="username valid-feedback"></div>
-                <div class="username invalid-feedback">El nombre de usuario no es válido</div>
-              </div>
-              <!-- Text input -->
-              <div class="form-outline mb-4">
-                <label class="form-label" for="mail">Correo electrónico</label>
-                <input type="email" id="mail" class="form-control" />
-                <div class="mail valid-feedback"></div>
-                <div class="mail invalid-feedback">El correo no es válido.</div>
-              </div>
-    
-              <!-- Text input -->
-              <div class="form-outline mb-4">
-                <label class="form-label" for="password">Contraseña</label>
-                <input type="password" id="password" class="form-control" pattern="^.{8,}$" />
-                <div class="password valid-feedback"></div>
-                <div class="password invalid-feedback">La contraseña debe tener al menos 8 caracteres.</div>
-              </div>
-  
-              <input type="submit" id="submit" class="btn btn-success w-100 mb-2" value="Crear" />
+              <input type="submit" id="submit" class="btn btn-success w-100 mb-2" value="Crear" disabled/>
             </form>
-            <p>¿Ya tienes cuenta? <a href="{% url 'login' %}" class="text-dark">Inicia sesión aqui</a></p>
+            <p>¿Ya tienes cuenta? <a href="{% url 'login'%}" class="text-dark">Inicia sesión aqui</a></p>
           </div>
         </div>
       </div>
