--- a/core/templates/core/contacto.html
+++ b/core/templates/core/contacto.html
@@ -30,65 +30,26 @@
 <body>
   <!-- TOP BAR -->
   {% include "core/repeat/topBar.html" %}
-
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26619.667506001068!2d-70.76060885405637!3d-33.4894478688012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662dcd1fe0c7bab%3A0x4d17b82a7ba77488!2sDuoc%20UC%3A%20Sede%20Maipu!5e0!3m2!1ses!2scl!4v1652278979149!5m2!1ses!2scl" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   <!-- Formulario de Feedback -->
   <div class="container my-5">
-    <div class="row justify-content-center">
-      <div class="col-lg-8 my-2">
-        <h2>Contacto</h2>
-        <p>Encuentranos en la siguiente dirección:</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26619.667506001068!2d-70.76060885405637!3d-33.4894478688012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662dcd1fe0c7bab%3A0x4d17b82a7ba77488!2sDuoc%20UC%3A%20Sede%20Maipu!5e0!3m2!1ses!2scl!4v1652278979149!5m2!1ses!2scl" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+    <div class="row">
+      <div class="col-12 col-md-6 offset-md-3">
+        <div class="card">
+          <div class="card-body">
+            <h2>Contacto</h2>
+            <p>Encuentranos en la siguiente dirección</p>
+            <hr>
+            <form action="" method="POST">
+              {% csrf_token %}
+              {{ form.as_p }}
+              <input type="submit" value="Enviar Mensaje" class="btn w-100 btn-success float-right">
+            </form>
+            {{mensaje}}
+          </div>
+        </div>
       </div>
     </div>
-       
-   
-    <form class="row justify-content-center"  id="feedbackForm">
-      <!-- Ingreso del nombre -->
-      <div class="col-lg-8 form-group my-2">
- 
-        <p>...O envianos un mensaje diciendonós en qué podemos ayudarte</p>
-          <label class="form-control-label mb-2" for="name">Nombre</label>
-          <input type="text" class="form-control" name="name" id="name" 
-          autocomplete="off" required>
-          <div class="valid-feedback"></div>
-          <div class="invalid-feedback">Debe completar este campo.</div>
-      </div>
-      <!-- Ingreso del apellido -->
-      <div class="col-lg-8 form-group my-2">
-        <label class="form-control-label mb-2" for="mail">Correo electrónico</label>
-        <input type="email" class="form-control" name="mail" id="mail" 
-        autocomplete="off" required>
-        <div class="valid-feedback"></div>
-        <div class="invalid-feedback">Correo electrónico inválido.</div>
-    </div>
-      <!-- Ingreso del correo electrónico -->
-      <div class="col-lg-8 form-group my-2">
-        <label class="form-control-label mb-2" for="phone">Número de teléfono (Solo chileno +56):</label>
-        <input type="number" class="form-control" min="99999999" max="99999999999" maxlength="11" autocomplete="off" required id="numero" name="num">
-        <div class="valid-feedback"></div>
-        <div class="invalid-feedback">Télefono inválido</div>
-    </div>
-      
-      <!-- Asunto del mensaje -->
-      <div class="col-lg-8 form-group my-2">
-        <label class="form-control-label mb-2" for="asunto">Asunto</label>
-        <input type="text" class="form-control" required name="asunto" id="asunto">
-        <div class="valid-feedback"></div>
-        <div class="invalid-feedback">Debes completar este campo.</div>
-      </div>
-      <!-- Contenido del mensaje -->
-      <div class="col-lg-8 form-group my-2">
-        <label class="form-control-label mb-2" for="msg">Mensaje</label>
-        <textarea class="form-control" id="" rows="3" required minlength="10"></textarea>
-        <div class="valid-feedback"></div>
-        <div class="invalid-feedback">Debe contener al menos 10 carácteres.</div>
-      </div>
-      <!-- Envio del formulario -->
-      <div class="col-lg-8 form-group my-2">
-          <button type="submit" class="btn w-25 btn-success" id="btnSubmit">Enviar</button>
-      </div>
-  </form>
   </div>
   
   <!-- FOOTER -->
@@ -97,7 +58,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="{% static 'core/js/form_validator.js' %}"></script>
-
 
 </body>
 </html>
