--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -25,18 +25,18 @@
             <form method="post">
               <!-- Text input -->
               <div class="form-outline mb-4">
-                <label class="form-label" for="form7Example3">Nombre de usuario</label>
-                <input type="text" id="form7Example3" class="form-control" pattern="^[a-zA-Z0-9]{3,12}$" />
-                <div class="valid-feedback"></div>
-                <div class="invalid-feedback">El nombre de usuario no es válido.</div>
+                <label class="form-label" for="username">Nombre de usuario</label>
+                <input type="text" id="username" class="form-control" pattern="^[a-zA-Z0-9]{3,12}$"/>
+                <div class="username valid-feedback"></div>
+                <div class="username invalid-feedback">El nombre de usuario no es válido</div>
               </div>
     
               <!-- Text input -->
               <div class="form-outline mb-4">
-                <label class="form-label" for="form7Example4">Contraseña</label>
-                <input type="password" id="form7Example4" class="form-control" pattern="^.{8,}$" />
-                <div class="valid-feedback"></div>
-                <div class="invalid-feedback">La contraseña debe tener al menos 8 caracteres.</div>
+                <label class="form-label" for="password">Contraseña</label>
+                <input type="password" id="password" class="form-control" pattern="^.{8,}$" />
+                <div class="password valid-feedback"></div>
+                <div class="password invalid-feedback">La contraseña debe tener al menos 8 caracteres.</div>
               </div>
 
               <input type="submit" id="form7Example5" class="btn btn-success w-100 mb-2" value="Ingresar" />
@@ -50,5 +50,5 @@
   {% include "core/repeat/footer.html" %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script src="{% static 'core/js/form_validator.js' %}"></script>
+  <script src="{% static 'core/js/form_validation_login.js' %}"></script>
 </body>
