--- a/core/templates/core/repeat/footer.html
+++ b/core/templates/core/repeat/footer.html
@@ -1,4 +1,4 @@
-<footer class="container-fluid text-white pt-3">
+<footer class="container-fluid text-white pt-3 m-auto">
   {% load static %}
   <div class="container-lg py-2">
       <div class="row justify-content-center">
