--- a/core/templates/core/repeat/topBar.html
+++ b/core/templates/core/repeat/topBar.html
@@ -25,9 +25,19 @@
           <li class="nav-item my-2 my-sm-0 me-sm-4">
             <a class="text-opacity-75" href="{% url 'soporte' %}">SOPORTE</a>
           </li>
-          <li class="nav-item my-2 my-sm-0 me-sm-4">
-            <a class="text-opacity-75" href="{% url 'login' %}">CUENTA</a>
-          </li>
+          
+          {% if user.is_authenticated %}
+            <li class="nav-item my-2 my-sm-0 me-sm-4">
+              <a class="text-opacity-75" href="{% url 'account' %}">MI CUENTA</a>
+            </li>
+            <li class="nav-item my-2 my-sm-0 me-sm-4">
+              <a class="text-opacity-75" href="{% url 'logout' %}">CERRAR SESIÓN</a>
+            </li>
+          {% else %}
+            <li class="nav-item my-2 my-sm-0 me-sm-4">
+              <a class="text-opacity-75" href="{% url 'login' %}">INICIAR SESIÓN</a>
+            </li>
+          {% endif %}
         </ol>
       </div>
   </div>
