--- a/core/templates/registration/account.html
+++ b/core/templates/registration/account.html
@@ -11,8 +11,30 @@
   <link rel="stylesheet" href="{% static 'core/css/global.css' %}">
   <link rel="icon" type="image/x-icon" href="{% static 'core/img/favicon.ico' %}">
   <script src="{% static 'core/js/test_validator.js' %}"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
+
+  {% block js %}
+    <script>
+      function eliminarCuenta(id) {
+        Swal.fire({
+          "title": "¿Estás seguro?",
+          "text": "Esta acción se puede deshacer",
+          "icon": "question",
+          "showCancelButton": true,
+          "CancelButtonText": "Cancelar",
+          "confirmButtonText": "Eliminar",
+          "reverseButtons": true,
+          "confirmButtonColor": "#bb2d3b"
+        }).then(function(result) {
+          if (result.isConfirmed) {
+            window.location.href = "/deleteaccount/"+id+"/"
+          }
+        })
+      }
+    </script>
+  {% endblock %}
   <!-- TOP BAR -->
   {% include "core/repeat/topBar.html" %}
   <div class="container my-5">
@@ -22,7 +44,7 @@
           <div class="card-body">
             <div class="d-flex justify-content-between">
               <h2>Mi Cuenta</h2>
-              <button class="btn btn-success">Editar</button>
+              <a href="{% url 'editaccount' user.get_username %}"><button class="btn btn-success">Editar</button></a>
             </div>
             <hr>
             <p class="lead">Nombre de usuario: {{user.get_username}}</p>
@@ -41,7 +63,9 @@
               {{user.last_name}}
               {% endif %}
             </p>
+            <button class="btn btn-danger" onclick="eliminarCuenta('{{user.get_username}}')">Eliminar Cuenta</button>
           </div>
+          
         </div>
       </div>
     </div>
@@ -50,6 +74,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="{% static 'core/js/form_validation_login.js' %}"></script>
   <!-- FOOTER -->
-  {% include "core/repeat/footer.html" %}
+
 </body>
 </html>
