--- a/core/templates/registration/editaccount.html
+++ b/core/templates/registration/editaccount.html
@@ -20,14 +20,14 @@
       <div class="col-12 col-md-6 offset-md-3">
         <div class="card">
           <div class="card-body">
-            <h2>Registrarse</h2>
+            <h2>Modificar Cuenta ({{user.get_username}})</h2>
             <hr>
             <form action="" method="POST">
-              {% csrf_token %}
-              {{ form.as_p }}
-              <input type="submit" value="Crear Cuenta" class="btn w-100 btn-success float-right">
-              <p class="mt-2">¿Ya tienes una cuenta? <a href="{% url 'login' %}" class="text-success">Inicia sesión aqui</a></p>
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input type="submit" value="Guardar Cambios" class="btn w-100 btn-success float-right">       
             </form>
+
           </div>
         </div>
       </div>
@@ -36,7 +36,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="{% static 'core/js/form_validation_register.js' %}"></script>
-  <!-- FOOTER -->
+
 
 </body>
 </html>
