--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -15,7 +15,7 @@
   <!-- TOP BAR -->
   {% include "core/repeat/topBar.html" %}
   <br><br><br>
-  <div class="container">
+  <div class="container my-5">
     <div class="row">
       <div class="col-12 col-md-6 offset-md-3">
         <div class="card">
@@ -37,6 +37,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="{% static 'core/js/form_validation_login.js' %}"></script>
   <!-- FOOTER -->
-  {% include "core/repeat/footer.html" %}
+
 </body>
 </html>
