--- a/core/templates/core/contacto.html
+++ b/core/templates/core/contacto.html
@@ -18,6 +18,7 @@ https://developers.arcgis.com/documentation/mapping-apis-and-services/get-starte
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="{% static 'core/css/global.css' %}">
+  <link rel="icon" type="image/x-icon" href="{% static 'core/img/favicon.ico' %}">
   <title>Contacto - Macetitas</title>
   <style>
     #viewDiv {
