Creacion de Sistema de Ventas

--- a/core/templates/core/repeat/footer.html
+++ b/core/templates/core/repeat/footer.html
@@ -17,8 +17,9 @@
               <h5 class="mb-3">Mapa del Sitio</h5> 
               <li><a class="text-decoration-none" href="{% url 'index' %}">Página Principal</a></li>
               <li><a class="text-decoration-none" href="{% url 'quienes_somos' %}">Quiénes Somos</a></li>
-              <li><a class="text-decoration-none" href="{% url 'galeria' %}">Galería de Fotos</a></li>
+              <li><a class="text-decoration-none" href="{% url 'galeria' %}">Tienda</a></li>
               <li><a class="text-decoration-none" href="{% url 'contacto' %}">Contacto</a></li>
+              <li><a class="text-decoration-none" href="{% url 'soporte' %}">Soporte</a></li>
               <li><a class="text-decoration-none" href="{% url 'login' %}">Cuenta</a></li>
             </ul>
         </div>
