--- a/core/templates/core/repeat/topBar.html
+++ b/core/templates/core/repeat/topBar.html
@@ -17,7 +17,7 @@
             <a class="text-opacity-75" href="{% url 'quienes_somos' %}">QUIENES SOMOS</a>
           </li>
           <li class="nav-item my-2 my-sm-0 me-sm-4">
-            <a class="text-opacity-75" href="{% url 'galeria' %}">GALERÍA DE FOTOS</a>
+            <a class="text-opacity-75" href="{% url 'galeria' %}">TIENDA</a>
           </li>
           <li class="nav-item my-2 my-sm-0 me-sm-4">
             <a class="text-opacity-75" href="{% url 'contacto' %}">CONTACTO</a>
@@ -41,4 +41,5 @@
         </ol>
       </div>
   </div>
+
 </nav>
