--- a/core/templates/registration/register.html
+++ b/core/templates/registration/register.html
@@ -13,10 +13,10 @@
 </head>
 <body>
   {% include "core/repeat/topBar.html" %}
-  <section class="m-5">
-    <div class="row justify-content-center">
-      <div class="col-md-8 mb-4 w-25">
-        <div class="card mb-4">
+  <div class="container my-5">
+    <div class="row">
+      <div class="col-12 col-md-6 offset-md-3">
+        <div class="card">
           <div class="card-header py-3">
             <h5 class="mb-0">Crear Cuenta</h5>
           </div>
@@ -92,10 +92,10 @@
       </div>
     </div>
   
-  </section>
+  </div>
   {% include "core/repeat/footer.html" %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script src="{% static 'core/js/form_validation_register.js' %}"></script>
+  <script src="{% static 'core/js/form_validator_register.js' %}"></script>
 </body>
 </html>
