--- a/core/templates/tienda/tienda.html
+++ b/core/templates/tienda/tienda.html
@@ -25,7 +25,7 @@
     
     <div class="container mb-3 pb-5">
         <div class="row g-3 text-center justify-content-around">
-            {% for cardNumber in '012345678901' %}
+            {% for plant in plantas %}
             {% include "tienda/product_card.html" %}
             {% endfor %}
         </div>
