--- a/core/templates/core/ordenes.html
+++ b/core/templates/core/ordenes.html
@@ -1,53 +1,57 @@
+<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 <!DOCTYPE html>
 <html lang="en">
 {% load static %}
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="{% static 'core/css/global.css' %}">
-  <link rel="icon" type="image/x-icon" href="{% static 'core/img/favicon.ico' %}">
-  <title>Mis Ordenes | Macetitas</title>
+    {% include "core/repeat/head.html" %}
+    <title>Mis Ordenes | Macetitas</title>
 </head>
+
 <body>
-  {% include "core/repeat/topBar.html" %}
+    <div class="main-content">
+        {% include "core/repeat/topBar.html" %}
 
-  <div class="container mt-5">
-    <h4>Mis pedidos</h4>
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">N° boleta</th>
-          <th scope="col">Nombre del producto</th>
-          <th scope="col">Cantidad</th>
-          <th scope="col">Precio</th>
-          <th scope="col">Estado</th>
-        </tr>
-        {% for o in orden %}
-        <tr>
-          <th>{{o.id}}</th>
-          <th>{{o.id_producto.nombre_prod}}</th>
-          <th>{{o.precio}}</th>
-          <th>{{o.precio}}</th>
-          <th>{{o.get_estado_display}}</th>
-        </tr>
-        {% endfor %}
-      </thead>
-    </table>
-  </div>
-  
-    <!-- {% for q in Questions %}
-    <tr>
-      {% for a in q.question.all %}
-        <td>{{q}}</td>
-        <td>{{a.answer}}</td>
-      {% endfor %}
-    </tr>
-    {% endfor %} -->
+        <div class="container mt-5">
+            <h4>Mis pedidos<i class="ps-2 bi bi-box-seam"></i></h4>
+            <table class="table table-hover table-sm text-center">
+                <thead>
+                    <tr>
+                        <th scope="col">N° boleta</th>
+                        <th scope="col">Fecha del pedido</th>
+                        <th scope="col">Total</th>
+                        <th scope="col">Estado</th>
+                        <th scope="col">Detalles</th>
+                    </tr>
+                <tbody>
+                    {% load humanize %}
+                    {% for o in orden %}
+                    <tr>
+                        <th>{{o.id}}</th>
+                        <th>{{o.fecha|date:'d-m-Y'}}</th>
+                        <th>${{o.total|intcomma}}</th>
+                        <th>
+                            {% if o.get_estado_display == 'En espera' %}
+                            <span class="badge bg-secondary" style="user-select: none;">{{o.get_estado_display}}</span>
+                            {% elif o.get_estado_display == 'En camino' %}
+                            <span class="badge bg-primary" style="user-select: none;">{{o.get_estado_display}}</span>
+                            {% elif o.get_estado_display == 'Entregado' %}
+                            <span class="badge bg-success" style="user-select: none;">{{o.get_estado_display}}</span>
+                            {% endif %}
+                        </th>
+                        <th><a href="{% url 'boleta' o.id %}"><button class="btn btn-success btn-sm"><i
+                                        class="bi bi-eye-fill"></i></button></a></th>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+                </thead>
+            </table>
+        </div>
+    </div>
 
+    {% include "core/repeat/footer.html" %}
 
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
+
 </html>
