--- a/core/templates/core/quienes_somos.html
+++ b/core/templates/core/quienes_somos.html
@@ -1,85 +1,86 @@
 <!DOCTYPE html>
 <html lang="es">
 {% load static %}
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="{% static 'core/css/global.css' %}">
-  <link rel="icon" type="image/x-icon" href="{% static 'core/img/favicon.ico' %}">
-  <title>Quienes Somos - Macetitas</title>
+    {% include "core/repeat/head.html" %}
+    <title>Quienes Somos - Macetitas</title>
 </head>
+
 <body class="bg-black">
-  <!-- TOP BAR -->
-  {% include "core/repeat/topBar.html" %}
+    <div class="main-content">
+        <!-- TOP BAR -->
+        {% include "core/repeat/topBar.html" %}
 
-  <!-- Mid Body -->
-  <div class="container-fluid py-0 text-white bg-black">
-    <div class="container-md p-2 text-center d-flex justify-content-center">
-      <div style="max-width: 750px">
-        <h1 class="fw-bold fs-3 my-2">¿QUIENES SOMOS?</h1>
-        <p class="opacity-75 my-3 fs-6">Somos una comunidad de vendedores de plantas y maceteros que buscan ayudar a las
-          personas a reconectarse con el mundo natural</p>
-      </div>
+        <!-- Mid Body -->
+        <div class="container-fluid py-0 text-white bg-black">
+            <div class="container-md p-2 text-center d-flex justify-content-center">
+                <div style="max-width: 750px">
+                    <h1 class="fw-bold fs-3 my-2">¿QUIENES SOMOS?</h1>
+                    <p class="opacity-75 my-3">Somos una comunidad de vendedores de plantas y maceteros que buscan
+                        ayudar a las
+                        personas a reconectarse con el mundo natural</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Nuestra Misión y Visión y Objetivo -->
+        <div class="parrafoImg mb-0 d-block d-md-flex row-cols-md-2 text-white">
+            <div class=" p-0">
+                <div class="d-lg-flex text-center text-lg-start align-items-center justify-content-around py-3"
+                    style="background-image: url({% static 'core/img/quienes_somos/plants-1.jpg' %}); background-position: center; background-size: cover;">
+                    <div class="text-block">
+                        <p class="pre-heading mb-2">NUESTRA MISIÓN</p>
+                        <h2 class="fw-bold fs-3">Ofrecer productos de calidad</h2>
+                        <p class="mb-0">Nos apasiona ofrecer nuestro productos a la gente para tener un mundo más verde,
+                            para asi
+                            formar más consciencia sobre el medioambiente.</p>
+                    </div>
+                    <!-- <img class="img-fluid mx-lg-0 mx-sm-auto d-sm-block" src="img/plants-1.jpg" alt=""> -->
+                </div>
+                <div class="d-lg-flex text-center text-lg-start align-items-center justify-content-around py-3"
+                    style="background-image: url({% static 'core/img/quienes_somos/gardening-tools.jpg' %}); background-position: center; background-size: cover;">
+                    <div class="text-block">
+                        <p class="pre-heading mb-2">NUESTRA VISIÓN</p>
+                        <h2 class="fw-bold fs-3">Ser lideres en la venta de productos de jardinería</h2>
+                        <p class="mb-0">Nuestra visión es la de ser mejores y ofrecer productos innovadores de alta
+                            calidad y ser
+                            una empresa con conciencia ambientalista y ecológica.</p>
+                    </div>
+                    <!-- <img class="img-fluid mx-lg-0 mx-sm-auto d-sm-block" src="img/gardening-tools.jpg" alt=""> -->
+                </div>
+                <div class="d-lg-flex text-center text-lg-start align-items-center justify-content-around py-3"
+                    style="background-image: url({% static 'core/img/quienes_somos/plants-2.jpg' %}); background-position: center; background-size: cover;">
+                    <div class="text-block">
+                        <p class="pre-heading mb-2">NUESTRO OBJETIVO</p>
+                        <h2 class="fw-bold fs-3">Formar una sociedad más verde en Chile y el mundo</h2>
+                        <p class="mb-0">Buscamos construir un futuro donde la gente se pueda reunir para aprender,
+                            conectar y tomar
+                            acción para preservar nuestro medio ambiente.</p>
+                    </div>
+                    <!-- <img class="img-fluid mx-lg-0 mx-sm-auto d-sm-block" src="img/plants-2.jpg" alt=""> -->
+                </div>
+            </div>
+            <div class="p-0"
+                style="background-image: url({% static 'core/img/quienes_somos/column.jpg' %}); background-size: cover; background-position: center;">
+                <div class="text-white py-3">
+                    <div class="container-fluid text-center justify-content-center">
+                        <p class="opacity-75 sub-heading mb-2">¿SABIAS QUE...?</p>
+                        <h3 class="fs-4 my-3 fw-bold">Tener plantas en casa es como tener un ambientador natural</h3>
+                        <p>El aroma de ciertos tipos de flor puede ser lo suficientemente potente como para percibirse
+                            en toda la habitación. Mira el siguiente video para conocer más beneficios de tener plantas:
+                        </p>
+                        <iframe class="frameVideo mt-md-5" src="https://www.youtube.com/embed/dr-ET-uLj1U"
+                            title="YouTube video player" frameborder="0"
+                            allow=" autoplay; clipboard-write; encrypted-media;" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 
-  <!-- Nuestra Misión y Visión y Objetivo -->
-  <div class="parrafoImg mb-0 d-block d-md-flex row-cols-md-2 text-white">
-    <div class=" p-0">
-      <div class="d-lg-flex text-center text-lg-start align-items-center justify-content-around py-3"
-           style="background-image: url({% static 'core/img/quienes_somos/plants-1.jpg' %}); background-position: center; background-size: cover;">
-        <div class="text-block">
-          <p class="pre-heading mb-2">NUESTRA MISIÓN</p>
-          <h2 class="fw-bold fs-3">Ofrecer productos de calidad</h2>
-          <p class="fs-6 mb-0">Nos apasiona ofrecer nuestro productos a la gente para tener un mundo más verde, para asi
-            formar más consciencia sobre el medioambiente.</p>
-        </div>
-        <!-- <img class="img-fluid mx-lg-0 mx-sm-auto d-sm-block" src="img/plants-1.jpg" alt=""> -->
-      </div>
-      <div class="d-lg-flex text-center text-lg-start align-items-center justify-content-around py-3"
-           style="background-image: url({% static 'core/img/quienes_somos/gardening-tools.jpg' %}); background-position: center; background-size: cover;">
-        <div class="text-block">
-          <p class="pre-heading mb-2">NUESTRA VISIÓN</p>
-          <h2 class="fw-bold fs-3">Ser lideres en la venta de productos de jardinería</h2>
-          <p class="fs-6 mb-0">Nuestra visión es la de ser mejores y ofrecer productos innovadores de alta calidad y ser
-            una empresa con conciencia ambientalista y ecológica.</p>
-        </div>
-        <!-- <img class="img-fluid mx-lg-0 mx-sm-auto d-sm-block" src="img/gardening-tools.jpg" alt=""> -->
-      </div>
-      <div class="d-lg-flex text-center text-lg-start align-items-center justify-content-around py-3"
-           style="background-image: url({% static 'core/img/quienes_somos/plants-2.jpg' %}); background-position: center; background-size: cover;">
-        <div class="text-block">
-          <p class="pre-heading mb-2">NUESTRO OBJETIVO</p>
-          <h2 class="fw-bold fs-3">Formar una sociedad más verde en Chile y el mundo</h2>
-          <p class="fs-6 mb-0">Buscamos construir un futuro donde la gente se pueda reunir para aprender, conectar y tomar
-            acción para preservar nuestro medio ambiente.</p>
-        </div>
-        <!-- <img class="img-fluid mx-lg-0 mx-sm-auto d-sm-block" src="img/plants-2.jpg" alt=""> -->
-      </div>
-    </div>
-    <div class="p-0" style="background-image: url({% static 'core/img/quienes_somos/column.jpg' %}); background-size: cover; background-position: center;">
-      <div class="text-white py-3">
-        <div class="container-fluid text-center justify-content-center">
-          <p class="opacity-75 sub-heading mb-2">¿SABIAS QUE...?</p>
-          <h3 class="fs-4 my-3 fw-bold">Tener plantas en casa es como tener un ambientador natural</h3>
-            <p class="fs-6">El aroma de ciertos tipos de flor puede ser lo suficientemente potente como para percibirse
-              en toda la habitación. Mira el siguiente video para conocer más beneficios de tener plantas:</p>
-            <iframe class="frameVideo mt-md-5" src="https://www.youtube.com/embed/dr-ET-uLj1U" title="YouTube video player"
-              frameborder="0" allow=" autoplay; clipboard-write; encrypted-media;" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
- <!-- Beneficios -->
- 
-
-  <!-- FOOTER -->
-  {% include "core/repeat/footer.html" %}
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- FOOTER -->
+    {% include "core/repeat/footer.html" %}
 </body>
+
 </html>
