--- a/core/templates/registration/account.html
+++ b/core/templates/registration/account.html
@@ -1,80 +1,106 @@
+<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 <!DOCTYPE html>
 <html lang="es">
 {% load static %}
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi Cuenta | Macetitas</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="{% static 'core/css/global.css' %}">
-  <link rel="icon" type="image/x-icon" href="{% static 'core/img/favicon.ico' %}">
-  <script src="{% static 'core/js/test_validator.js' %}"></script>
-  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    {% include "core/repeat/head.html" %}
+    <title>Mi Cuenta | Macetitas</title>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
+
 <body>
 
-  {% block js %}
+    {% block js %}
     <script>
-      function eliminarCuenta(id) {
-        Swal.fire({
-          "title": "¿Estás seguro?",
-          "text": "Esta acción se puede deshacer",
-          "icon": "question",
-          "showCancelButton": true,
-          "CancelButtonText": "Cancelar",
-          "confirmButtonText": "Eliminar",
-          "reverseButtons": true,
-          "confirmButtonColor": "#bb2d3b"
-        }).then(function(result) {
-          if (result.isConfirmed) {
-            window.location.href = "/deleteaccount/"+id+"/"
-          }
-        })
-      }
+        function eliminarCuenta() {
+            Swal.fire({
+                "title": "¿Estás seguro?",
+                "text": "Esta acción se puede deshacer",
+                "icon": "question",
+                "showCancelButton": true,
+                "CancelButtonText": "Cancelar",
+                "confirmButtonText": "Eliminar",
+                "reverseButtons": true,
+                "confirmButtonColor": "#bb2d3b"
+            }).then(function (result) {
+                if (result.isConfirmed) {
+                    window.location.href = "{% url 'deleteaccount' user.get_username %}"
+                }
+            })
+        }
     </script>
-  {% endblock %}
-  <!-- TOP BAR -->
-  {% include "core/repeat/topBar.html" %}
-  <div class="container my-5">
-    <div class="row">
-      <div class="col-12 col-md-6 offset-md-3">
-        <div class="card">
-          <div class="card-body">
-            <div class="d-flex justify-content-between">
-              <h2>Mi Cuenta</h2>
-              <a href="{% url 'editaccount' user.get_username %}"><button class="btn btn-success btn-sm"><i class="bi bi-sliders h5 me-2"></i>Editar</button></a>
+    {% endblock %}
+<div class="main-content">
+
+    <!-- TOP BAR -->
+    {% include "core/repeat/topBar.html" %}
+    <div class="container my-5">
+        <div class="row">
+            <div class="col-12 col-md-8 offset-md-2">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between">
+                            <h2>Mi Cuenta</h2>
+                            <a href="{% url 'editaccount' user.get_username %}"><button
+                                    class="btn btn-success btn-sm"><i
+                                        class="bi bi-sliders h5 me-2"></i>Editar</button></a>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-5 text-start">
+                                <p>USUARIO: </p>
+                                <p>EMAIL: </p>
+                                <p>NOMBRE: </p>
+                                <p>APELLIDO: </p>
+                                <p>SUBSCRIPTOR: </p>
+                                {% if isSub %}
+                                <p>VIGENCIA SUBSCRIPCIÓN: </p>
+                                {% endif %}
+                            </div>
+                            <div class="col-7 text-center fw-bold">
+                                <p>{{user.get_username}}</p>
+                                <p>{{user.email}}</p>
+                                <p>{{user.first_name}}</p>
+                                <p>{{user.last_name}}</p>
+                                {% if isSub %}
+                                <p>Si</p>
+                                <p>{{sub.vigencia}}</p>
+                                {% else %}
+                                <p>No</p>
+                                {% endif %}
+                                
+                            </div>
+                        </div>
+                        <div class="row justify-content-center">
+                            <div class="col-sm-4">
+                                <a class="btn btn-primary w-100 h-100 rounded-3" href="{% url 'ordenes' user.get_username %}">
+                                    <i class="bi bi-box-seam"></i><br>Mis pedidos
+                                </a>
+                            </div>
+                            {% if request.user.is_superuser %}
+                            <div class="col-sm-4 my-3 my-sm-0">
+                                <a class="btn btn-success w-100 h-100 rounded-3" href="{% url 'subscriptores' %}">
+                                    <i class="bi bi-people-fill"></i><br>Ver Subscriptores
+                                </a>
+                            </div>
+                            {% endif %}
+                            <div class="col-sm-4">
+                                <button class="btn btn-danger w-100 h-100 rounded-3" onclick="eliminarCuenta()">
+                                    <i class="bi bi-person-x-fill"></i><br>Eliminar Cuenta
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <hr>
-            <p class="lead">Nombre de usuario: {{user.get_username}}</p>
-            <p class="lead">Correo electrónico: {{user.email}}</p>
-            <p class="lead">Nombre:
-              {% if user.first_name is None %}
-                Nombre no definido
-              {% else %}
-                {{user.first_name}}
-              {% endif %}
-            </p>
-            <p class="lead">Apellido:
-              {% if user.last_name is None %} 
-                Apellido no definido
-              {% else %}
-              {{user.last_name}}
-              {% endif %}
-            </p>
-            <a href="{% url 'ordenes' user.get_username %}"><button class="btn btn-primary">Mis pedidos</button></a>
-            <button class="btn btn-danger" onclick="eliminarCuenta('{{user.get_username}}')"><i class="bi bi-person-x-fill h5 me-2"></i>Eliminar Cuenta</button>
-          </div>
-          
         </div>
-      </div>
     </div>
-  </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script src="{% static 'core/js/form_validation_login.js' %}"></script>
-  <!-- FOOTER -->
+</div>
+    <!-- FOOTER -->
+    {% include "core/repeat/footer.html" %}
 
 </body>
+
 </html>
