--- a/core/templates/registration/editaccount.html
+++ b/core/templates/registration/editaccount.html
@@ -1,42 +1,46 @@
 <!DOCTYPE html>
 <html lang="es">
 {% load static %}
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Registro de usuario | Macetitas</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="{% static 'core/css/global.css' %}">
-  <link rel="icon" type="image/x-icon" href="{% static 'core/img/favicon.ico' %}">
-  <!-- <script src="{% static 'core/js/test_validator.js' %}"></script> -->
+    {% include "core/repeat/head.html" %}
+    <title>Registro de usuario | Macetitas</title>
 </head>
+
 <body>
-  <!-- TOP BAR -->
-  {% include "core/repeat/topBar.html" %}
-  <div class="container my-5">
-    <div class="row">
-      <div class="col-12 col-md-6 offset-md-3">
-        <div class="card">
-          <div class="card-body">
-            <h2>Modificar Cuenta ({{user.get_username}})</h2>
-            <hr>
-            <form action="" method="POST">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" id="submit" value="Guardar Cambios" class="btn w-100 btn-success float-right">       
-            </form>
-
-          </div>
+    <div class="main-content">
+        <!-- TOP BAR -->
+        {% include "core/repeat/topBar.html" %}
+        <div class="container my-5">
+            <div class="row">
+                <div class="col-12 col-md-6 offset-md-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Modificar Cuenta ({{user.get_username}})</h2>
+                            <hr>
+                            <form action="" method="POST">
+                                {% csrf_token %}
+                                {{ form.as_p }}
+                                <div class="row">
+                                    <div class="col-6">
+                                        <input type="submit" id="submit" value="Guardar Cambios"
+                                            class="btn w-100 btn-success">
+                                    </div>
+                                    <div class="col-6">
+                                        <input type="button" value="Cancelar"
+                                            onclick="window.history.go(-1); return false;" class="btn w-100 btn-danger">
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script src="{% static 'core/js/form_validator_register.js' %}"></script>
-
+    {% include "core/repeat/footer.html" %}
+    <script src="{% static 'core/js/form_validator_register.js' %}"></script>
 
 </body>
+
 </html>
