--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -1,60 +1,60 @@
 <!DOCTYPE html>
 <html lang="es">
 {% load static %}
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="{% static 'core/css/global.css' %}">
-  <link rel="icon" type="image/x-icon" href="{% static 'core/img/favicon.ico' %}">
-  <title>Iniciar Sesión - Macetitas</title>
-</head>
-<body style="height: 100vh; display: flex; flex-direction: column">
-  {% include "core/repeat/topBar.html" %}
-  <div class="container my-5">
-    <div class="row">
-      <div class="col-12 col-md-6 offset-md-3">
-        <div class="card">
-          <div class="card-header py-3">
-            <h5 class="mb-0">Iniciar Sesión</h5>
-          </div>
-          <div class="card-body">
-            
-            <form method="post">
-              {% csrf_token %}
-              
-              <div class="form-group">
-                  {% if form.errors %}
-                    <p class="text-danger">USUARIO O CONTRASEÑA INCORRECTOS</p>
-                  {% endif %}
-                  <!-- Text input -->
-                  <div class="form-outline mb-4">
-                    <label class="form-label" for="usuario">Nombre de usuario</label>
-                    <!-- {{form.username}} -->
-                    <input type="text" id="username" name="username" class="form-control"/>
-                  </div>
-                  
-                  <!-- Text input -->
-                  <div class="form-outline mb-4">
-                    <label class="form-label" for="password">Contraseña</label>
-                    <!-- {{form.password}} -->
-                    <input type="password" id="password" name="password" class="form-control" />
-                  </div>
-                  <p class="text-danger">{{ mensaje }}</p>
-              </div>
-              <input type="submit" id="submit" class="btn btn-success w-100 mb-2" value="Ingresar" />
-            </form>
-            <p>¿Aún no tienes una cuenta? <a href="{% url 'register' %}" class="text-dark">Crea una nueva aqui</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  {% include "core/repeat/footer.html" %}
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<head>
+    {% include "core/repeat/head.html" %}
+    <title>Iniciar Sesión - Macetitas</title>
+</head>
+
+<body>
+    <div class="main-content">
+        {% include "core/repeat/topBar.html" %}
+        <div class="container my-5">
+            <div class="row">
+                <div class="col-12 col-md-6 offset-md-3">
+                    <div class="card">
+                        <div class="card-header py-3">
+                            <h5 class="mb-0">Iniciar Sesión</h5>
+                        </div>
+                        <div class="card-body">
+
+                            <form method="post">
+                                {% csrf_token %}
+
+                                <div class="form-group">
+                                    {% if form.errors %}
+                                    <p class="alert alert-danger text-center py-1 fs-6" role="alert">USUARIO O
+                                        CONTRASEÑA INCORRECTOS</p>
+                                    {% endif %}
+                                    <!-- Text input -->
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label" for="usuario">Nombre de usuario</label>
+                                        <!-- {{form.username}} -->
+                                        <input type="text" id="username" name="username" class="form-control" />
+                                    </div>
+
+                                    <!-- Text input -->
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label" for="password">Contraseña</label>
+                                        <!-- {{form.password}} -->
+                                        <input type="password" id="password" name="password" class="form-control" />
+                                    </div>
+                                    <p class="text-danger">{{ mensaje }}</p>
+                                </div>
+                                <input type="submit" id="submit" class="btn btn-success w-100 mb-2 fw-bold"
+                                    value="INGRESAR" />
+                            </form>
+                            <p>¿Aún no tienes una cuenta? <a href="{% url 'register' %}" class="text-dark">Crea una
+                                    nueva aqui</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    {% include "core/repeat/footer.html" %}
 </body>
+
 </html>
