--- a/core/templates/tienda/tienda.html
+++ b/core/templates/tienda/tienda.html
@@ -3,21 +3,12 @@
 {% load static %}
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <link rel="stylesheet" href="{% static 'core/css/global.css' %}">
-    <link rel="icon" type="image/x-icon" href="{% static 'core/img/favicon.ico' %}">
+    {% include "core/repeat/head.html" %}
     <title>Tienda - Macetitas</title>
 </head>
 
 <body>
+<div class="main-content">
     <!-- TOP BAR -->
     {% include "core/repeat/topBar.html" %}
 
@@ -25,18 +16,30 @@
     
     <div class="container mb-3 pb-5">
         <div class="row g-3 text-center justify-content-around">
-            {% for plant in plantas %}
-            {% include "tienda/product_card.html" %}
-            {% endfor %}
+            {% if not productos %}
+                <p>No hay productos en la tienda.</p>
+            {% else %}
+                {% for product in productos %}
+                    {% include "tienda/product_card.html" %}
+                {% endfor %}
+            {% endif %}
         </div>
     </div>
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="liveToast" class="toast fade hide text-success fw-bold border-success" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="d-flex">
+                <div class="toast-body fs-5">
+                    ¡Producto agregado a carrito! <i class="bi bi-check2-circle"></i>
+                </div>
+                <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+        </div>
+    </div>
+</div>
 
     <!-- FOOTER -->
     {% include "core/repeat/footer.html" %}
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <script src="{% static 'core/js/cart.js' %}"></script>
 
 </body>
 
